# graphql-server-py

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: database.py  load_settings.py  main.py  models.py  resolvers.py  schema.py
app/database/: connect.py  models.py
app/graphql/: dvdrental.graphql  mutation.py  query.py  resolvers.py  types.py
my_lib/: pg_sample_schema-0.1.0-py3-none-any.whl
