[tool.poetry]
name = "graphql-python"
version = "0.1.0"
description = "GraphQL Python server for querying PostgreSQL data"
authors = ["dongju93 <spdlqj011@gmail.com>"]
maintainers = ["dongju93 <spdlqj011@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dongju93/graphql-server-py"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
strawberry-graphql = { extras = ["debug-server"], version = "0.243.1" }
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "0.31.0" }
asyncpg = "^0.29.0"
pg-sample-schema = {path = "my_lib/pg_sample_schema-0.1.1-py3-none-any.whl"}
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
